# docs/swagger.json
@@ -181,6 +181,15 @@
                 }
             }
         },
+        "dto.ExchangeType": {
+            "type": "string",
+            "enum": [
+                "binance"
+            ],
+            "x-enum-varnames": [
+                "ExchangeBinance"
+            ]
+        },
         "dto.FetchAllTradesResponse": {
             "type": "object",
             "properties": {
@@ -206,6 +215,17 @@
                 }
             }
         },
+        "dto.MarketType": {
+            "type": "string",
+            "enum": [
+                "spot",
+                "futures"
+            ],
+            "x-enum-varnames": [
+                "MarketSpot",
+                "MarketFutures"
+            ]
+        },
         "dto.RegisterRequest": {
             "type": "object",
             "properties": {
@@ -213,13 +233,13 @@
                     "type": "string"
                 },
                 "exchange": {
-                    "type": "string"
+                    "$ref": "#/definitions/dto.ExchangeType"
                 },
                 "isTestnet": {
                     "type": "boolean"
                 },
                 "market": {
-                    "type": "string"
+                    "$ref": "#/definitions/dto.MarketType"
                 },
                 "secret": {
                     "type": "string"
